<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Sunshine</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="action_refresh">Refresh</string>
  <string name="action_view_map">Show Location on a Map</string>
  <string name="action_share">Share</string>
  <string name="title_activity_detail">DetailActivity</string>

  <string name="error_no_maps">There is no mapping application available</string>


  <string name="format_summary">"%1$s - %2$s - %3$s / %4$s"</string>
  <string name="format_summary_date">EEE, MMM dd</string>
  <!-- Use as
    String.format(context.getString(R.string.format_temperature_metric, digits), temperature) -->
  <string name="format_temperature_metric">%%.%1$df°C</string>
  <!-- Use as
    String.format(context.getString(R.string.format_temperature_imperial, digits), temperature) -->
  <string name="format_temperature_imperial">%%.%1$df°F</string>
  <string name="format_humidity">Humidity: %1$d %%</string>
  <string name="format_pressure">Pressure: %1$.1f hPa</string>
  <string name="format_wind">Wind: %1$.1f km/h %2$s</string>

  <string name="title_activity_settings">Settings</string>

  <string name="pref_key_location" translatable="false">Location</string>
  <string name="pref_title_location">Location</string>
  <string name="pref_default_location" translatable="false">Melbourne,AU</string>

  <string name="pref_key_units" translatable="false">units</string>
  <string name="pref_title_units">Units</string>
  <string name="pref_default_units" translatable="false">@string/pref_entry_units_metric</string>


  <string name="pref_entry_units_metric">Metric</string>
  <string name="pref_entry_units_imperial">Imperial</string>

  <string name="pref_title_API_key">API Key</string>
  <string name="pref_key_API_key">api-key</string>
</resources>
