<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <EditTextPreference
    android:defaultValue="@string/pref_default_location"
    android:inputType="text"
    android:key="@string/pref_key_location"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    android:title="@string/pref_title_location"/>

  <ListPreference
    android:defaultValue="@string/pref_default_units"
    android:entries="@array/pref_list_labels_units"
    android:entryValues="@array/pref_list_values_units"
    android:key="@string/pref_key_units"
    android:title="@string/pref_title_units"
    />

  <EditTextPreference
    android:inputType="text"
    android:key="@string/pref_key_API_key"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    android:title="@string/pref_title_API_key"
    />
</PreferenceScreen>
